test/integration/bad/new/type-size-bad25.stan
data { ordered[T ~ normal(0,1)] x;}